2000-11-16  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSUserDefaults.m: ([-userLanguages]) updated to ensure we
	don't get empty strings in the language list.
	* Headers/Foundation/GSMime.h: Revised API
	* Source/GSMime.m: Revised API to make more sense
	* Documentation/gsdoc/GSMime.gsdoc: ditto
	* Documentation/gsdoc/GSMimeDocument.gsdoc: ditto
	* Documentation/gsdoc/GSMimeParser.gsdoc: ditto

2000-11-16  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSURL.m:  ([-explode]) bugfix for parsing username/password
	provided by mark@brainstorm.co.uk

2000-11-16  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSTcpPort.m: Altered all GSTcpHandle debug output to include
	current thread.  Added locking for read/write operations on handle.
	Hopefully all thread-safe now :-)

2000-11-15  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSConnection.m: ([-_getReplyRmc:]) added semi-busy wait
	for when the connection is being used from multiple threads.

2000-11-15  Richard Frith-Macdonald <rfm@gnu.org>

	* configure.in: Added checks for OpenSSL
	* Headers/gnustep/base/NSFileHandle.h: Added info for SSL handles.
	* Source/UnixFileHandle.m: Added GSUnixSSLHandle class based on
	code by <mark@brainstorm.co.uk>

2000-11-15  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSBundle.m: Minor tidying to avoid compiler warnings.
	* Source/NSFileManager.m: ditto

Tue Nov 14 23:44:14 2000  Adam Fedor  <fedor@yogi.doc.com>

	* Source/GSString.m: Add limits.h (for Solaris)

2000-11-14  Adam Fedor  <fedor@gnu.org>

	* Source/GSLocale.m: Put LANGINFO_H ifdefs around include of
	langinfo.h.

2000-11-14  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSTcpPort.m: ([GSTcpHandle -receivedEvent:type:extra:forMode:])
	added locks around write operations for multi-threaded operation.
	newDataWithEncodedPort() modified to encode local host as an empty
	string, and other hosts by name rather than address.
	decodePort() added new parameter so that an empty string can be