@@ -7,8 +7,8 @@
       <email address="rfm@gnu.org"/>
       <url url="http://www.gnustep.org/developers/whoiswho.html"/>
     </author>
-    <version>0.2</version>
-    <date>16 November, 2000</date>
+    <version>0.3</version>
+    <date>17 November, 2000</date>
   </head>
   <body>
     <chapter>
@@ -18,6 +18,27 @@
 	for representing MIME (and HTTP) documents and managing conversions
 	to and from convenient internal formats.
       </p>
+      <p>
+	Eventually the goal is to center round three classes -
+      </p>
+      <deflist>
+	<term>document</term>
+	<desc>
+	  A container for the actual data (and headers) of a mime/http document.
+	</desc>
+	<term>parser</term>
+	<desc>
+	  An object that can be fed data and will parse it into a document.
+	  This object also provides various utility methods  and an API
+	  that permits overriding in order to extend the functionality to
+	  cope with new document types.
+	</desc>
+	<term>unparser</term>
+	<desc>
+	  An object to take a mime/http document and produce a data object
+	  suitable for transmission.
+	</desc>
+      </deflist>
       <section>
           <heading>The classes</heading>
           <list>
