@@ -9,8 +9,8 @@
 <dt><a href ="http://www.gnustep.org/developers/whoiswho.html">Richard Frith-Macdonald</a>
 <dd>
 </dl>
-<p>Version: 0.2</p>
-<p>Date: 16 November, 2000</p>
+<p>Version: 0.3</p>
+<p>Date: 17 November, 2000</p>
 <h2><a name ="cont-0">Mime Parser</a></h2>
 <p>
 
@@ -18,6 +18,28 @@
 	for representing MIME (and HTTP) documents and managing conversions
 	to and from convenient internal formats.
       </p>
+<p>
+
+	Eventually the goal is to center round three classes -
+      </p>
+<dl>
+<dt>document
+<dd>
+	  A container for the actual data (and headers) of a mime/http document.
+	
+<dt>parser
+<dd>
+	  An object that can be fed data and will parse it into a document.
+	  This object also provides various utility methods  and an API
+	  that permits overriding in order to extend the functionality to
+	  cope with new document types.
+	
+<dt>unparser
+<dd>
+	  An object to take a mime/http document and produce a data object
+	  suitable for transmission.
+	
+</dl>
 <h3><a name ="cont-1">The classes</a></h3>
 <ul>
 <li><a href ="GSMimeDocument.html">GSMimeDocument</a>
