@@ -57,6 +57,9 @@
 	    
 <dt>Value
 <dd>This is the value of the header (normally lower case).
+	      It may only be a small subset of the information in the header
+	      with other information being split into separate fields
+	      depending on the type of header.
 	    
 </dl>
 
